Clean up UC summary for customer presentation
- Add detailed Test Environment section
- Remove internal optimization notes and recommendations
- Remove unused data sizing options (SMALL, MEDIUM, XLARGE)
- Streamline document structure
- Move complete queries to appendix

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>